--- a/src/index.html
+++ b/src/index.html
@@ -9,6 +9,8 @@
     <h1>Título principal</h1>
 
     <h2>Subtítulo</h2>
+
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsum, excepturi!</p>
     
 </body>
 </html>
